force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/LLC_BI__Underwriting_Bundle__c.object-meta.xml
<CustomObject>
    <label>Underwriting Bundle</label>
    <nameField>
        <label>Underwriting Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Underwriting Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>