force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Is_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Consolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users populate this checkbox field to indicate if the purpose of an underwriting bundle is for consolidations. By default, it is not selected.</description>
    <label>Is Consolidation</label>
    <type>Checkbox</type>
</CustomField>