force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Show_Footnotes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Show_Footnotes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. User updated. Indicates whether Footnotes will be displayed for its statements.</description>
    <inlineHelpText>Indicates whether Footnotes will be displayed for its statements.</inlineHelpText>
    <label>Show Footnotes</label>
    <type>Checkbox</type>
</CustomField>