force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Version__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Version__c</fullName>
    <description>Users populate this optional text field to indicate the version of the template. By default, it is blank.</description>
    <inlineHelpText>Populate this field to indicate the version of the template. For example, “1.5”.</inlineHelpText>
    <label>Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>