force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/validationRules/LLC_BI__Template_Cannot_Have_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Template_Cannot_Have_Relationship</fullName>
    <active>true</active>
    <description>A template cannot be related to a Relationship.</description>
    <errorConditionFormula>AND(
  ( LLC_BI__Is_Template__c = True ),
  NOT( ISBLANK( LLC_BI__Relationship__c ) )
)</errorConditionFormula>
    <errorMessage>A template cannot be related to a Relationship.</errorMessage>
</ValidationRule>