force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Description__c</columns>
    <columns>LLC_BI__Selected_Scale__c</columns>
    <columns>LLC_BI__Is_Template__c</columns>
    <columns>LLC_BI__Is_Disabled__c</columns>
    <columns>LLC_BI__Relationship__c</columns>
    <columns>LLC_BI__Collateral__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>