force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/listViews/Spreads_in_Use.listView-meta.xml
<ListView>
    <fullName>Spreads_in_Use</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Spreads in Use</label>
</ListView>