force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/listViews/Templates.listView-meta.xml
<ListView>
    <fullName>Templates</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Description__c</columns>
    <columns>LLC_BI__Is_Template__c</columns>
    <columns>LLC_BI__Is_Disabled__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LLC_BI__Is_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Templates</label>
    <sharedTo>
        <role>nCino_Administrator</role>
    </sharedTo>
</ListView>